--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header') %>
+<%- include('partials/head') %>
 <%- include('partials/navbar') %>
   <body>
     <h2>Estou na primeira página</h2>
