--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,22 @@
 <%- include('partials/head') %>
 <%- include('partials/navbar') %>
   <body>
-    <h2>Estou na primeira página</h2>
+    <main class="container">
+      <h1>Perguntas</h1>
+      <a href="/perguntar" class="btn btn-primary">Fazer nova pergunta</a>
+      <hr class="mb-5">
+      <% pergunta.reverse().forEach(item => { %>
+      <div class="card mb-4">
+        <div class="card-body">
+          <h3> <%= item.title %></h3>
+          <p><%= item.descripiton %></p>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-success">Responder</button>
+        </div>
+      </div>
+      <% }) %>
+    </main>
   </body>
   <%- include('partials/footer') %>
 </html>
