feat: question view style

--- a/views/question.ejs
+++ b/views/question.ejs
@@ -4,7 +4,7 @@
    <main class="container">
     <div class="card">
       <div class="card-body">
-        <h1><%= pergunta.title %></h1>
+        <h1 class="h2"><%= pergunta.title %></h1>
       </div>
       <div class="card-footer">
         <p><%= pergunta.descripiton %></p>
