--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
           <p><%= item.descripiton %></p>
         </div>
         <div class="card-footer">
-          <button class="btn btn-success">Responder</button>
+          <a href="/pergunta/<%= item.id%>" class="btn btn-success">Responder</a>
         </div>
       </div>
       <% }) %>
